# markdown-gettext

./: .gitlab-ci.yaml  pyproject.toml
markdown_gettext/: domain_extraction.py
