# SPDX-FileCopyrightText: 2023 Phu Hung Nguyen <phuhnguyen@outlook.com>
# SPDX-License-Identifier: CC0-1.0

[project]
name = "markdown-gettext"
version = "0.2.1"
description = "Markdown i18n with gettext"
authors = ["Phu Hung Nguyen <phuhnguyen@outlook.com>"]
license = "LGPL-2.1-or-later"
readme = "README.md"
repository = "https://invent.kde.org/sdk/markdown-gettext"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Internationalization",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3"
]
packages = [{include = "markdown_gettext"}]
requires-python = ">=3.11"
dependencies = [
    "mdit-py-i18n @ https://invent.kde.org/sdk/mdit-py-i18n.git",
    "polib>=1.2.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
md-gettext = 'markdown_gettext.cli:main'
markdown-gettext = 'markdown_gettext.cli:main'
